Improved a lot and removed the error definition specs for now.
